--- a/AW_Small.css
+++ b/AW_Small.css
@@ -85,6 +85,7 @@ li a.active {
 #headText h1, #headText h5
 {
     margin: 5px 0;
+	text-shadow: 2px 2px #333;
 }
 .social
 {
@@ -145,6 +146,7 @@ li a.active {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
+	text-shadow: 2px 2px #333;
 }
 #expDivider
 {
